--- a/week3/index.html
+++ b/week3/index.html
@@ -2,10 +2,29 @@
 <html>
     <head>
             <meta charset="UTF-8">
-            <title>Anita's Coffee Shop - Home</title>
+            <title>Jackie & Anita's Coffee Shop - Home</title>
     </head>
     <body>
-        <h1>Anita's Coffee Shop</h1>
-        <p>Welcome to our coffee shop!</p>
+        <!--This is an HTML comment -->
+        <!-- CRTL/Command + / to add or remove a comment -->
+
+        <!-- Site Header -->
+        <header>
+            <h1>Jackie & Anita's Coffee Shop</h1>
+        </header>
+        <!-- Starting the main content -->
+        <main>
+            <!-- article of the page. Can be a standalone -->
+            <article>
+                <h2>Our Story</h2>
+                <p>
+                    We are a <em>Family owned business</em>. Jackie is the <abbr title="Chief Executive Officer">CEO</abbr> and she is the head barista of the shop. Anita is the pastry chef and is in charge of the bake shop. Celebrating their 10<sup>th</sup> anniversary together in October 2023.
+                </p>
+            </article>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
