Finishes main content and footer in index.html

--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
             <title>Jackie & Anita's Coffee Shop - Home</title>
     </head>
     <body>
-        <!--This is an HTML comment -->
+        <!-- This is an HTML comment -->
         <!-- CRTL/Command + / to add or remove a comment -->
 
         <!-- Site Header -->
@@ -20,11 +20,67 @@
                 <p>
                     We are a <em>Family owned business</em>. Jackie is the <abbr title="Chief Executive Officer">CEO</abbr> and she is the head barista of the shop. Anita is the pastry chef and is in charge of the bake shop. Celebrating their 10<sup>th</sup> anniversary together in October 2023.
                 </p>
+
+                <blockquote>
+                     We love all things coffee! <cite>- Jackie and Anita </cite>
+                </blockquote>
+                <hr>
+                <section>
+                    <h3>Ottawa</h3>
+                    <p>
+                        We are a local coffee shop based in Ottawa. Our specialty is <b>organic Fairtrade</b> coffee.
+                    </p>
+                </section>
             </article>
+            <aside>
+                <h3>Merchandise</h3>
+                <!-- Adding unordered List -->
+                <ul>
+                    <li>T-shirts</li>
+                    <li>Hats</li>
+                    <li>Hoodies</li>
+                </ul>
+            </aside>
+            <!-- Adding section for ordered list -->
+            <section>
+                <h3>Events</h3>
+                <ol>
+                    <li>October 23<sup>rd</sup> - Coffee for Hope Foundation</li>
+                    <li>February17<sup>th</sup> - Live Music</li>
+                </ol>
+            </section>
+            
+            <!-- Adding a section for a description list -->
+            <section>
+                <h3>Treat of the Week</h3>
+                <dl>
+                    <dt>Name</dt>
+                    <dd>Chocolate Chip Banana Bread</dd>
+
+                    <dt>Calories</dt>
+                    <dd>250cal</dd>
+
+                    <dt>Ingredients</dt>
+                    <dd>
+                        <ul>
+                            <li>All-Purpose Flour</li>
+                            <li>Baking Soda</li>
+                            <li>Salt</li>
+                            <li>Butter</li>
+                            <li>Sugar</li>
+                            <li>Eggs</li>
+                            <li>Bananas</li>
+                            <li>Chocolate Chips</li>
+                        </ul>
+                    </dd>
+                </dl>
+            </section>
         </main>
-
+        <!-- Site footer -->
         <footer>
-
+            <!-- Specialty symbols for HTML entities can be found by googling HTML entities -->
+            &copy;Copyright Jackie & Anita's Coffee Shop, 2023
         </footer>
     </body>
+
 </html>
