Continues Jackie's section

--- a/week3/index.html
+++ b/week3/index.html
@@ -48,6 +48,7 @@
                 <h3>Events</h3>
                 <ol>
                     <li>October 23<sup>rd</sup> - Coffee for Hope Foundation</li>
+                    <li>December 29<sup>th</sup> - New Years Charity Ball (with free coffee!)</li>
                     <li>February17<sup>th</sup> - Live Music</li>
                 </ol>
             </section>
@@ -69,6 +70,7 @@
                             <li>Baking Soda</li>
                             <li>Salt</li>
                             <li>Butter</li>
+                            <li>Vanilla Extract</li>
                             <li>Sugar</li>
                             <li>Eggs</li>
                             <li>Bananas</li>
@@ -83,14 +85,17 @@
              <h2>Jackie</h2>
                     <h3>About Me</h3>
                     <p>
-                        I was born and raised in Hong Kong, where I was caught up in the hustle and bustle of the city. I picked my career accordingly, but something always felt amiss. I have always dreamed of owning a coffee shop, but I had to give up that dream in order to live comfortably in my city. But now that I have moved to Canada and have established myself in the business world, I want to finally pursue my dreams-- a different kind of business. 
+                        I was born and raised in Hong Kong, where I was caught up in the hustle and bustle of the city. I picked my career accordingly, but something always felt amiss. I have always dreamed of owning a coffee shop, but I had to give up that dream in order to live comfortably in my city. But now that I've moved to Canada and have established myself in the business world, I want to finally pursue my childhood dreams. 
                     </p>
                     <p>
                        
 
                         I hardly consider this a job; this is more like a passion project. When I think about it, I realize how fortunate I am to be brewing coffee, tea, wonderful, caffeinated concoctions, and delicate, aromatic teas. It also doesn't hurt to be running a business alongside my daughter. She bakes and I brew, and it's a great system if I do say so myself. 
 
-                        My favourite part about the job would have to be the customers. Old and young, new and regulars-- through serving them we catch a glimpse into their lives. Are they a dark roast or Iced Macchiato with caramel syrup and whipped cream kind of person? Have they come to indulge themselves or are they fatigued and in need of a boost?
+                        My favourite part of the job would have to be the customers. Old and young, new and regular—through serving them, we catch a glimpse into their lives. I consider our store a harbour for people from all walks of life. And ultimately, as long as my coffee shop can bring them a modicum of joy or relief, then I'd say my job is well worth it.
+                        What is my favourite quote? Well, it'd have to be: 
+                        <em>"Nothing is impossible, the word itself says I'm possible."</em>
+
                     </p>
 
             
