changes store anniversary date

--- a/week3/index.html
+++ b/week3/index.html
@@ -18,7 +18,7 @@
             <article>
                 <h2>Our Story</h2>
                 <p>
-                    We are a <em>family-owned business</em>. Jackie is the <abbr title="Chief Executive Officer">CEO</abbr> and she is the head barista of the shop. Anita is the pastry chef and is in charge of the bake shop. Celebrating their 10<sup>th</sup> anniversary together in October 2023.
+                    We are a <em>family-owned business</em>. Jackie is the <abbr title="Chief Executive Officer">CEO</abbr> and she is the head barista of the shop. Anita is the pastry chef and is in charge of the bake shop. Celebrating their 3<sup>rd</sup> anniversary together in October 2023.
                 </p>
 
                 <blockquote>
