--- a/week4/index.html
+++ b/week4/index.html
@@ -13,6 +13,13 @@
     <!-- Site Header -->
     <header>
         <h1>J&A's Coffee Shop</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+
     </header>
     <!-- Starting the main content -->
     <main>
@@ -85,6 +92,7 @@
                     </ul>
                 </dd>
             </dl>
+            <!-- Adding an external link -->
         </section>
 
         <article>
