adds recipe and links to index.html

--- a/week4/index.html
+++ b/week4/index.html
@@ -93,6 +93,7 @@
                 </dd>
             </dl>
             <!-- Adding an external link -->
+            <a href="https://natashaskitchen.com/banana-bread-recipe-video/" target="_blank">Get the recipe here!</a>
         </section>
 
         <article>
