--- a/week4/index.html
+++ b/week4/index.html
@@ -24,6 +24,8 @@
     <!-- Starting the main content -->
     <main>
         <!-- article of the page. Can be a standalone -->
+        <!-- Adding an on-page link -->
+        <a href="#treatoftheweek">Treat of the Week</a>
         <article>
             <h2>Our Story</h2>
             <!-- Adding an image -->
@@ -68,7 +70,7 @@
         </section>
 
         <!-- Adding a section for a description list -->
-        <section>
+        <section id="treatoftheweek">
             <h3>Treat of the Week</h3>
             <dl>
                 <dt>Name</dt>
@@ -94,6 +96,35 @@
             </dl>
             <!-- Adding an external link -->
             <a href="https://natashaskitchen.com/banana-bread-recipe-video/" target="_blank">Get the recipe here!</a>
+        </section>
+        
+        <section>
+        <!-- Adding a section for Menu Table -->
+            <h3> Menu Specials </h3>
+            <table border>
+                <thead>
+                    <tr>
+                        <th colspan="2">Items</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th rowspan="2">Calories</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Chocolate Chip Banana Bread</td>
+                        <td>250Cal</td>
+                        <td>&dollar;4.00</td>
+                    </tr>
+                    <tr>
+                        <td>Golden Oatmeal</td>
+                        <td>110Cal</td>
+                        <td>&dollar;8.00</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <article>
