--- a/week4/contact.html
+++ b/week4/contact.html
@@ -45,6 +45,60 @@
             <td>CLOSED</td>
         </tr>
        </table>
+       <!-- Adding a section for a Contact Form -->
+       <section>
+        <h3>We would love to hear from you!</h3>
+        <!-- Adding the form -->
+        <form action="thanks.html" method="post">
+            <div>
+
+                <label for="fullname">Name</label>
+                <input type="text" id="fullname" name="fullname">
+            </div>
+
+            <div>
+
+                <label for="youremail">Email</label>
+                <input type="email" id="youremail" name="youremail" placeholder="Algonquin Email" value="@algonquinlive.com" required>
+            </div>
+
+            <div>
+                <label for="message">Message</label>
+                <textarea name="message" id="message"> 
+            </div>
+            
+            <div>
+                <label for="tickets">How many tickets? &#40;sold in pairs&#41;</label>
+                <input type="number" id="tickets" name="tickets" min="2" max="10" step="2" value="2">
+            </div>
+
+            <div>
+                <label for="row">Row</label>
+                <select name="row" id="row">
+                    <option value="front">Front Row</option>
+                    <option value="center" selected>Center Row</option>
+                    <option value="back">Back Row</option>
+                </select>
+            </div>
+
+            <div>
+                <h3>Have you been here before?</h3>
+                <label for="yes">Yes</label>
+                <input type="radio" name="past" id="yes">
+
+                <label for="no">No</label>
+                <input type="radio" name="past" id="no">
+
+            </div>
+
+            <div>
+                <h3>Policies</h3>
+                <input type="checkbox" name="policies" id="policies">
+                <label for="policies">I agree to the terms and conditions.</label>
+            </div>
+
+        </form>
+       </section>
     </main>
     <!-- Site footer -->
     <footer>
