--- a/week4/contact.html
+++ b/week4/contact.html
@@ -33,17 +33,20 @@
                     <th>Hours</th>
                 </tr>
             </thead>
-            <tbody></tbody>
-            <tr>
-                <td>Mon-Fri</td>
-                <td>6AM-8PM</td>
-            </tr>
-            <td>Sat</td>
-            <td>9AM-11PM</td>
-            <tr>
-                <td>Sun</td>
-                <td>CLOSED</td>
-            </tr>
+            <tbody>
+                <tr>
+                    <td>Mon-Fri</td>
+                    <td>6AM-8PM</td>
+                </tr>
+                <tr>
+                    <td>Sat</td>
+                    <td>9AM-11PM</td>
+                </tr>
+                <tr>
+                    <td>Sun</td>
+                    <td>CLOSED</td>
+                </tr>
+            </tbody>
         </table>
         <!-- Adding a section for a Contact Form -->
         <section>
