adds jpeg to html assignment

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,16 @@
 <body>
     <header>
         <h1>Anita Gautama</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="notes.html">Notes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <article>
+
 
             <h2>About Me</h2>
 
@@ -55,12 +62,27 @@
 
             </p>
 
+            <p>
+                My favourite person in the world has to be my grandmother. Although she is no longer with us, she will
+                forever remain in my heart as the bravest and kindest person ever. She was an artist and greatly
+                influenced my artistic abilities as a child. We would spend hours painting together and singing. She had
+                an amazing voice and was overall the most talented and amazing woman.
+            </p>
+
+            <img src="./images/dressed-as-nani.jpg" width="250" height="350" alt="dressed as nani">
+            <p>
+                This is an image of eight-year-old me dressed like my grandmother. She's in the background of this image, and was most
+                likely the one who put me up to this.
+            </p>
+
             <blockquote>"The purpose of our lives is to be happy." <cite>Dalai Lama</cite></blockquote>
+
+
 
         </article>
     </main>
     <footer>
-        &copy;Copyright Anita Gautama, 2023
+        &copy; Copyright Anita Gautama, 2023
     </footer>
 </body>
 
