adds finishing touches to notes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -18,18 +18,24 @@
     </header>
     <main>
         <h2>HTML tags and description</h2>
-            <ul>
-                <li>The &lt;head&gt; tag is a container for metadata &#40;information like title, author, creation date and more&#41;	and is placed between the &lt;html&gt; tag and the &lt;body&gt; tag.  </li>
-                <li>The &lt;paragraph&gt; tag is a paragraph tag used for structure and organization. I used this tag on my Home Page.</li>
-                <li>The &lt;ul&gt; tag is used for unordered lists, where torder of appearance does not matter. </li>
-                <li>The &lt; &gt;</li>
-                <li>The &lt; &gt;</li>
-            </ul>
+        <ul>
+            <li>The &lt;head&gt; tag is a container for metadata &#40;information like title, author, creation date and
+                more&#41; and is placed between the &lt;html&gt; tag and the &lt;body&gt; tag, just like in my document.
+            </li>
+            <li>The &lt;p&gt; tag is a paragraph tag used for structure and organization. I used this tag on my
+                homepage.</li>
+            <li>The &lt;ul&gt; tag is used for unordered lists, where order of appearance does not matter. I am using
+                this tag for this list. </li>
+            <li>The &lt;h1&gt; tag stands for heading 1. This is the most important heading and is often used for the
+                title, like I did with my name on the homepage.</li>
+            <li>The &lt;nav&gt; tag provides navigation to other links either within a document, or to another document.
+                I am using the nav tag in my document to jump between the current notes page and my homepage. </li>
+        </ul>
 
     </main>
-<footer>
-    &copy; Copyright Anita Gautama, 2023
-</footer>
+    <footer>
+        &copy; Copyright Anita Gautama, 2023
+    </footer>
 </body>
 
 </html>
