checks and beautifies index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,12 +15,16 @@
                 <li><a href="notes.html">Notes</a></li>
             </ul>
         </nav>
+
+
     </header>
     <main>
         <article>
 
 
             <h2>About Me</h2>
+
+            <blockquote>"The purpose of our lives is to be happy." <cite>Dalai Lama</cite></blockquote>
 
             <p>
                 My name is Anita Gautama, and I was born in Hong Kong. I am from a mixed family with an Indian/Kenyan
@@ -51,7 +55,7 @@
 
 
                 My favourite memories from Canada are mostly the travel. I often forget how vast this country is, and
-                there is always something new to see. I spent the summer of 2022 travelling across the Eastern
+                how much there is to see. I spent the summer of 2022 travelling across the Eastern
                 Provinces. We started In Ontario (obviously) and made our way through Quebec, New Brunswick, Novia
                 Scotia, PEI, and Newfoundland and Labrador. As for my favourite place, it&apos;s really a toss-up
                 between Newfoundland and Novia Scotia. The mountains and clear rivers of Gros Morne were breathtaking,
@@ -71,11 +75,29 @@
 
             <img src="./images/dressed-as-nani.jpg" width="250" height="350" alt="dressed as nani">
             <p>
-                This is an image of eight-year-old me dressed like my grandmother. She's in the background of this image, and was most
-                likely the one who put me up to this.
+                This is an image of eight-year-old me dressed like my grandmother. She's in the background of this
+                image, and was most likely the one who put me up to this.
             </p>
 
-            <blockquote>"The purpose of our lives is to be happy." <cite>Dalai Lama</cite></blockquote>
+            <h3>My Hobbies</h3>
+
+            <p>
+                If I had to list my hobbies in order of most enjoyment, I would say:
+            </p>
+            <ol>
+                <li>Travelling</li>
+                <li>Baking</li>
+                <li>Drawing</li>
+                <li>Cooking</li>
+                <li>Painting</li>
+            </ol>
+
+            <p>
+                Though I was able to order my hobbies from most to &quot;least&quot; enjoyment, I of course love them
+                all.
+            </p>
+
+
 
 
 
