completes and beautifies notes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <h2>HTML tags and description</h2>
+        <h2>HTML tags and descriptions</h2>
         <ul>
             <li>The &lt;head&gt; tag is a container for metadata &#40;information like title, author, creation date and
                 more&#41; and is placed between the &lt;html&gt; tag and the &lt;body&gt; tag, just like in my document.
