--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -30,7 +30,7 @@
                 My name is Anita Gautama, and I was born in Hong Kong. I am from a mixed family with an Indian/Kenyan
                 father and a Hong Konger Mother. My family and I grew up on an island called Lamma, where all sorts of
                 creatures crawled and slithered. We had a wide selection of wildlife—including the poisonous and
-                venomous—thanks to the abandoned bio-engineering projects from WWII. As a child I enjoyed playing
+                venomous—thanks to the abandoned biological warfare projects from WWII. As a child I enjoyed playing
                 outside and swimming in the South China Sea where we were surrounded by marine animals of all kinds.
                 There were sharks, dolphins, flying fish, turtles, and so many others.
 
