--- a/week5/index.html
+++ b/week5/index.html
@@ -25,7 +25,7 @@
 
         <!-- Starting the main content -->
         <main>
-            <a href="#treatoftheweek">Treat of the Week</a>
+            <a href="#treatoftheweek" class="blue-link">Treat of the Week</a>
             <!-- article of the page. Can be a standalone -->
             <article>
                 <h2>Our Story</h2>
