--- a/week5/contact.html
+++ b/week5/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>J&A's Coffee Shop - Contact Us</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
