finishes list in notes.html

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -18,19 +18,30 @@
     </header>
     <main>
         <h2>HTML tags and descriptions</h2>
-        <ul>
-            <li>The &lt;head&gt; tag is a container for metadata &#40;information like title, author, creation date and
-                more&#41; and is placed between the &lt;html&gt; tag and the &lt;body&gt; tag, just like in my document.
-            </li>
-            <li>The &lt;p&gt; tag is a paragraph tag used for structure and organization. I used this tag on my
-                homepage.</li>
-            <li>The &lt;ul&gt; tag is used for unordered lists, where order of appearance does not matter. I am using
-                this tag for this list. </li>
-            <li>The &lt;h1&gt; tag stands for heading 1. This is the most important heading and is often used for the
-                title, like I did with my name on the homepage.</li>
-            <li>The &lt;nav&gt; tag provides navigation to other links either within a document, or to another document.
-                I am using the nav tag in my document to jump between the current notes page and my homepage. </li>
-        </ul>
+
+        <dl>
+            <dt>Head</dt>
+
+            <dd>The &lt;head&gt; tag is a container for metadata &#40;information like title, author, creation date and
+                more&#41; and is placed between the &lt;html&gt; tag and the &lt;body&gt; tag, just like in my document.</dd>
+
+            <dt>Paragraph</dt>
+            <dd>The &lt;p&gt; tag is a paragraph tag used for structure and organization. I used this tag on my
+                homepage.</dd>
+
+            <dt>Unordered List</dt>
+            <dd>The &lt;ul&gt; tag is used for unordered lists, where order of appearance does not matter. I have used
+                it for the nav bar.</dd>
+
+            <dt>Header 1</dt>
+            <dd>The &lt;h1&gt; tag stands for heading 1. This is the most important heading and is often used for the
+                title, like I did with my name on the homepage.</dd>
+
+            <dt>Navigation</dt>
+            <dd>The &lt;nav&gt; tag provides navigation to other links either within a document, or to another document.
+                I am using the nav tag in my document to jump between the current notes page and my homepage.</dd>
+
+        </dl>
 
     </main>
     <footer>
