changes quote in index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>html-assignment</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <header>
+    <header class="site-title">
         <h1>Anita Gautama</h1>
+        
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="notes.html">Notes</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="notes.html">Notes</a>
+           
         </nav>
 
 
@@ -24,7 +25,7 @@
 
             <h2>About Me</h2>
 
-            <blockquote>"The purpose of our lives is to be happy." <cite>Dalai Lama</cite></blockquote>
+            <blockquote>"“You will never be happy if you continue to search for what happiness consists of. You will never live if you are looking for the meaning of life." <cite>― Albert Camus</cite></blockquote>
 
             <p>
                 My name is Anita Gautama, and I was born in Hong Kong. I am from a mixed family with an Indian/Kenyan
@@ -73,7 +74,7 @@
                 an amazing voice and was overall the most talented and amazing woman.
             </p>
 
-            <img src="./images/dressed-as-nani.jpg" width="250" height="350" alt="dressed as nani">
+            <img src="./images/dressed-as-nani.jpg" width="250" height="350" alt="dressed as nani" id="my-image">
             <p>
                 This is an image of eight-year-old me dressed like my grandmother. She's in the background of this
                 image, and was most likely the one who put me up to this.
@@ -84,7 +85,7 @@
             <p>
                 If I had to list my hobbies in order of most enjoyment, I would say:
             </p>
-            <ol>
+            <ol id="my-hobbies">
                 <li>Travelling</li>
                 <li>Baking</li>
                 <li>Drawing</li>
