changes quote in index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -25,7 +25,7 @@
 
             <h2>About Me</h2>
 
-            <blockquote>"“You will never be happy if you continue to search for what happiness consists of. You will never live if you are looking for the meaning of life." <cite>― Albert Camus</cite></blockquote>
+            <blockquote>"You will never be happy if you continue to search for what happiness consists of. You will never live if you are looking for the meaning of life." <cite> ― Albert Camus</cite></blockquote>
 
             <p>
                 My name is Anita Gautama, and I was born in Hong Kong. I am from a mixed family with an Indian/Kenyan
