--- a/midterm/index.html
+++ b/midterm/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <title>midterm</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Links style sheet -->
 </head>
 
 <body>
     <header class="site-title">
+        <img src="./images/lone-starfish-wide.jpg" alt="wide lone starfish banner">
         <h1>Lone Starfish</h1>
-
+        <!-- Adds a site header and starfish image to header -->
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>   
+                    <a href="#">Home</a>
                 </li>
 
                 <li>
@@ -25,40 +27,97 @@
                     <a href="#">Contact</a>
                 </li>
             </ul>
-         </nav>
-
+        </nav>
+        <!-- Adds nav bar -->
     </header>
 
     <main>
         <article>
             <h2>Life of a Starfish</h2>
+            <!-- Starting the main content -->
             <p>
-                Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
+                Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper
+                catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish
+                Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled
+                houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard.
+                Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea
+                devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.
+                Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker
+                northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu
+                Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish
+                halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker
+                crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish
+                emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel
+                tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth
+                humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin
+                false trevally, dottyback.
             </p>
 
             <h3>Facts About Starfish</h3>
+            <!-- Begins another section -->
             <p>
                 <ul>
-                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. 
+                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.
                     </li>
 
-                    <li> 
+                    <li>
                         Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.
                     </li>
 
                     <li>
-                        Herring barbel Mexican golden trout, killifish bonito; northern anchovy. 
-
+                        Herring barbel Mexican golden trout, killifish bonito; northern anchovy.
                     </li>
-                    
+
                     <li>
                         Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.
                     </li>
-
                 </ul>
             </p>
+
+            <section>
+
+                <!-- Adds a container for contact section -->
+                <form action="thanks.html" method="post">
+
+                    <div class="container">
+                        <h4> Contact to learn more </h4>
+                        <!-- Begins contact section -->
+
+                        <label for="fullname">Your Name</label>
+                        <input type="text" id="fullname" name="fullname">
+
+                    </div>
+                    <!-- Uses divs for separate sections -->
+                    <div>
+
+                        <label for="youremail">Your Email</label>
+                        <input type="email" id="youremail" name="youremail">
+                    </div>
+
+                    <div>
+                        <label for="message">Your Message</label>
+                        <textarea name="message" id="message"></textarea>
+                    </div>
+                    <!-- Adds radio buttons -->
+                    <div>
+                        <h5>Would you like to visit the starfish?</h5>
+
+                        <label for="yes">Yes</label>
+                        <input type="radio" name="past" id="yes">
+
+                        <label for="no">No</label>
+                        <input type="radio" name="past" id="no">
+
+                        <label for="maybe">Maybe</label>
+                        <input type="radio" name="past" id="maybe">
+                    </div>
+                    <button type="submit">Send</button>
+
+                </form>
+            </section>
 
         </article>
     </main>
 </body>
+
 </html>
