--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <header class="site-title">
-        <h1>Anita Gautama</h1>
+    <header>
+        <h1 class="site-title">Anita Gautama</h1>
         
         <nav>
             <a href="index.html">Home</a>
