--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>html-assignment</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
