adds css to un website

--- a/week9/index.html
+++ b/week9/index.html
@@ -25,7 +25,7 @@
         <main class="content">
             <!-- section.intro -->
             <section class="intro">
-                <h2>The UN Campaighn for Individual Action</h2>
+                <h2>The UN Campaign for Individual Action</h2>
                 <p>
                     To preserve a livable climate, greenhouse-gas emissions must be reduced by half by 2030 and to net
                     zero by 2050. Bold, fast, and wide-ranging action needs to be taken by governments and businesses.
@@ -45,16 +45,21 @@
                 </p>
 
             </section>
-            <!-- Closes Section -->
-            <section class="app">
+            <!-- Closes Intro Section -->
+            <section class="app clearfix">
                 <h2>Mobile App</h2>
-                <p>
-                    Make the shift to a more sustainable lifestyle. The mobile app by AWorld - because there is no
-                    planet B - allows you to choose and track a set of sustainable habits, and see the impact you are
-                    making in terms of CO2, water and electricuty saved. You can also take educational journeys, engage
-                    in group challeges, get tips and take the quizzes, all geared toward living more sustainably.
-                </p>
-                <a href="https://aworld.org/act-now/" class="btn" target="_blank">Download From App Store</a>
+                <img src="images/actnowapp.jpg" alt="Act Now Mobile App">
+                <div class= "content">
+                    <p>
+                        Make the shift to a more sustainable lifestyle. The mobile app by AWorld - because there is no
+                        planet B - allows you to choose and track a set of sustainable habits, and see the impact you
+                        are
+                        making in terms of CO2, water and electricuty saved. You can also take educational journeys,
+                        engage
+                        in group challeges, get tips and take the quizzes, all geared toward living more sustainably.
+                    </p>
+                    <a href="https://aworld.org/act-now/" class="btn" target="_blank">Download From App Store</a>
+                </div>
             </section>
             <!-- Closes App Section -->
         </main>
@@ -71,7 +76,7 @@
                     <span>Photo by <a href="https://www.pexels.com/@kelly-1179532/">Kelly</a> on <a
                             href="https://www.pexels.com/photo/factory-pipes-emitting-harmful-substances-4394362/">Pexels</a></span>
                 </li>
-                
+
             </ul>
             <p class="copy">
                 &copy; All the information is taken from the <a href="https://www.un.org/en/actnow">UN Act Now
