--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,11 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebDev Final</title>
 </head>
+
 <body>
-    
+    <div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Team</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </div>
+    <div>
+        <div>
+            <h1>
+                Welcome to Three Star Media
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad nesciunt explicabo ducimus cum maiores
+                accusantium consequuntur doloribus beatae tempora laboriosam, sed doloremque labore asperiores quod qui
+                officia eveniet? Dignissimos?</p>
+        </div>
+        <div>
+            <button type="button">Connect with us</button>
+        </div>
+    </div>
+    <div>
+        <h2>About Us</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae aspernatur vero odit atque itaque
+            consequuntur, vel hic minus officiis voluptas maiores numquam quaerat harum error sint sunt facilis eum.
+        </p>
+    </div>
+    <div>
+        <h2>Our Services</h2>
+        <div>
+            <div class="Services-Cards">
+                <h3>Digital Transformation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum corrupti
+                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus tenetur soluta
+                    modi veritatis! Rem, et?</p>
+                <div>
+                    <button type="button">Digital Plans</button>
+                </div>
+            </div>
+
+            <div class="Services-Cards">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum corrupti
+                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus tenetur soluta
+                    modi veritatis! Rem, et?</p>
+                <div>
+                    <button type="button">Marketing Plans</button>
+                </div>
+
+            </div>
+            <div class="Services-Cards">
+                <h3>Video Production</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum corrupti
+                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus tenetur soluta
+                    modi veritatis! Rem, et?</p>
+                <div>
+                    <button type="button">Video Plans</button>
+                </div>
+            </div>
+            <div class="Services-Cards">
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum corrupti
+                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus tenetur soluta
+                    modi veritatis! Rem, et?</p>
+                <div>
+                    <button type="button">Web Plans</button>
+                </div>
+                <div class="Services-Cards">
+                    <h3>Print</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum corrupti
+                        pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus tenetur
+                        soluta
+                        modi veritatis! Rem, et?</p>
+                    <div>
+                        <button type="button">Print Plans</button>
+                    </div>
+                </div>
+                <div>
+                    <h3>Our Vision</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt velit suscipit ad? Aperiam
+                        nesciunt nulla magnam non quo adipisci, cum incidunt veritatis iure, doloribus vitae ad earum
+                        eum beatae accusamus?
+                    </p>
+                    <div>
+                        <button type="button">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="Co-owners">
+                    <h2>Our Team</h2>
+                    <div>
+                        <h3>John Doe</h3>
+                        <h4>CEO and Co-owner</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vero, vel molestias quo minus
+                            rerum accusamus pariatur magni, necessitatibus voluptate repellat ducimus odit. Voluptatum
+                            cum, explicabo ipsum nulla vero minus!</p>
+                    </div>
+                    <div>
+                        <h3>Bob Rite</h3>
+                        <h4>CFO and Co-Owner</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A porro obcaecati corrupti
+                            reiciendis dolorum maiores aspernatur modi consectetur possimus earum non similique ad
+                            nesciunt, qui, aliquam praesentium? Unde, delectus aperiam!</p>
+                    </div>
+                </div>
+                <div>
+                    <h2>Contact Us</h2>
+                    <div>
+                        <h3>Send us a message</h3>
+                        <form action="#">Send us a message</form>
+                        <label for="Fullname">Full Name</label>
+                        <input type="text">
+                        <label for="Email">Email</label>
+                        <input type="text">
+                        <label for="Message">Message</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <button type="button">Send</button>
+                    </div>
+                    <div>
+                        <h3>Location</h3>
+                    </div>
+                    <div>
+                        <h3>Hours of operation</h3>
+                        <table>
+                            <tr>
+                                <td>Days</td>
+                                <td>Hours</td>
+                            </tr>
+                            <tr>
+                                <td>Monday - Friday</td>
+                                <td>9AM - 6PM</td>
+                            </tr>
+                            <tr>
+                                <td>Saturday - Sunday</td>
+                                <td>Closed</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+<footer>
+    &copy; Copyright Three Star Media, 2020
+    All images are taken from Unsplash
+</footer>
 </body>
+
 </html>
